unpackaged/main/default/objects/loan__Branch_Location__c/loan__Branch_Location__c.object-meta.xml
<CustomObject>
    <description>Branch Location</description>
    <label>Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>