unpackaged/main/default/objects/loan__Branch_Location__c/fields/loan__Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>loan__Address_Line_1__c</fullName>
    <description>Address Line 1</description>
    <inlineHelpText>Address Line 1</inlineHelpText>
    <label>Address Line 1</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>