unpackaged/main/default/objects/loan__Branch_Location__c/fields/loan__Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>loan__Address_Line_2__c</fullName>
    <description>Address Line 2</description>
    <inlineHelpText>Address Line 2</inlineHelpText>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>