unpackaged/main/default/objects/loan__Branch_Location__c/fields/loan__Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>loan__Address_Line_3__c</fullName>
    <description>Address Line 3</description>
    <inlineHelpText>Address Line 3</inlineHelpText>
    <label>Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>