unpackaged/main/default/objects/loan__Branch_Location__c/fields/loan__Phone__c.field-meta.xml
<CustomField>
    <fullName>loan__Phone__c</fullName>
    <description>Phone</description>
    <inlineHelpText>Phone</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>