unpackaged/main/default/objects/loan__Branch_Location__c/fields/loan__State__c.field-meta.xml
<CustomField>
    <fullName>loan__State__c</fullName>
    <description>State</description>
    <inlineHelpText>State</inlineHelpText>
    <label>State</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>