unpackaged/main/default/objects/loan__Branch_Location__c/fields/loan__Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Zip_Code__c</fullName>
    <description>Zip Code</description>
    <inlineHelpText>Zip Code</inlineHelpText>
    <label>Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>